# bananapy

./: .gitignore  hello.py  pyproject.toml
src/: main.py  push_to_talk_app.py  test_ca.py
