[project]
name = "bananapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "certifi>=2024.12.14",
    "numpy>=2.2.1",
    "openai[realtime]>=1.58.1",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "sounddevice>=0.5.1",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "textual-dev>=1.7.0",
]
